setup code blocl

--- a/content/blog/about-that-kiss.mdx
+++ b/content/blog/about-that-kiss.mdx
@@ -5,6 +5,9 @@ date: '2024-02-12'
 published: true
 ---
 
+![book cover](/img/aboutthatkiss.jpg)
+
+
 **What if the greatest role of your life is playing your true self?**
 
 Ida Burton used to be Hollywood’s sweetheart until the best roles started drying up in her 40s.
