code block styling mdx

--- a/content/blog/about-that-kiss.mdx
+++ b/content/blog/about-that-kiss.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'About that Kiss'
+title: About that Kiss
 description: Lesbian Age Gap
-date: '2024-02-12'
+date: 2024-02-12
 published: true
 ---
 
-![book cover](/img/aboutthatkiss.jpg)
+![About](/img/aboutthatkiss.jpg)
 
 
 **What if the greatest role of your life is playing your true self?**
