adding links in markdown

--- a/content/blog/about-that-kiss.mdx
+++ b/content/blog/about-that-kiss.mdx
@@ -6,6 +6,7 @@ published: true
 ---
 
 ![About](/img/aboutthatkiss.jpg)
+[About That Kiss](https://www.audible.com/pd/About-That-Kiss-Audiobook/B09F8GL8S6?eac_link=U4iYHiKxKuDc&ref=web_search_eac_asin_1&eac_selected_type=asin&eac_selected=B09F8GL8S6&qid=rjlbUt63SQ&eac_id=131-9173905-6001050_rjlbUt63SQ&sr=1-1)
 
 
 **What if the greatest role of your life is playing your true self?**
