--- a/content/blog/requiem-for-immortals.mdx
+++ b/content/blog/requiem-for-immortals.mdx
@@ -6,5 +6,6 @@ published: true
 ---
 
 ![Law](/img/requiemforimmort.jpg)
+[Requiem for Immortals](https://www.audible.com/pd/Requiem-for-Immortals-Audiobook/1400170095?eac_link=WZxImB13qr8h&ref=web_search_eac_asin_4&eac_selected_type=asin&eac_selected=1400170095&qid=aSxnq803Ej&eac_id=139-6077911-8515140_aSxnq803Ej&sr=1-4)
 
 Professional cellist Natalya Tsvetnenko moves seamlessly among the elite where she fills the souls of symphony patrons with beauty even as she takes the lives of the corrupt of Australia's ruthless underworld. The cold, exacting assassin is hired to kill a woman who seems so innocent that Natalya can't understand why anyone would want her dead. As she gets to know her target, she can't work out why she even cares. 
